welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:4: error: variable direction in class AbstractBuggle cannot be accessed in plm.runtime49.DwarfCode
  setDirection(direction.EAST)
               ^