welcome.lessons.welcome.summative.Moria.scala.code


while(!estFaceMur()){
  setDirection(direction.EAST)
  while (estSurBiscuit==false){
    avance()
  }
  
  prendBiscuit();retourne()
  
  while (estSurBiscuit==false){
    avance()
  }
  recule();poseBiscuit()
}